Header template html/css

--- a/src/template.html
+++ b/src/template.html
@@ -31,13 +31,14 @@
       </aside>
 
       <div class = "column">
-
         <header>
           <h1 class = "title" id = "title">Title</h1>
-          <p class = "counter" id = "counter"># Tasks to complete</p>
+          <p><span id = "counter">#</span> Tasks to complete</p>
         </header>
 
-        <main>a</main>
+        <main>
+
+        </main>
 
       </div>
     </div>
