main template html/css

--- a/src/template.html
+++ b/src/template.html
@@ -21,23 +21,49 @@
               <p>Projects List</p>
               <i class="fa-solid fa-plus" id = "add-project"></i>
           </div>
+
           <div class = "project-item">
             <div class = "project-item-name" id = "project-item-name">
                 General
             </div>
             <i class="fa-solid fa-trash" id = "project-remove"></i>
           </div>
+
         </div>
       </aside>
 
       <div class = "column">
         <header>
-          <h1 class = "title" id = "title">Title</h1>
+          <h1 class = "title" id = "title">Project Title</h1>
           <p><span id = "counter">#</span> Tasks to complete</p>
         </header>
 
         <main>
+          <div class = "tasks-container">
 
+            <div class = "task-item" id = "task-item">
+              <div class = "task-column">
+                <input type="checkbox" id = "task-status">
+              </div>
+
+              <div class= "task-column2">
+
+                <div class = "task-title" id = "task-title">
+                 <h3 id = "task-name">
+                   Study
+                  </h3>
+                  <i class="fa-solid fa-circle" id = "med-importance"></i>
+               </div>
+
+                <p id ="task-info">
+                  review math concepts on pg101
+                </p>
+
+             </div>
+            </div>
+
+            
+          </div>
         </main>
 
       </div>
