--- a/src/template.html
+++ b/src/template.html
@@ -7,6 +7,7 @@
     <script src="https://kit.fontawesome.com/5c122f6877.js" crossorigin="anonymous"></script>
   </head>
   <body>
+
     <div class = "content">
       <aside>
         <div class = "side-content">
@@ -54,6 +55,9 @@
                   </h3>
                   <i class="fa-solid fa-circle" id = "med-importance"></i>
                </div>
+               <h5 id ="task-date">
+                Date: 
+               </h5>
 
                 <p id ="task-info">
                   review math concepts on pg101
@@ -68,5 +72,30 @@
 
       </div>
     </div>
+    <dialog id = "edit-task">
+      <div class = "dialog-top">
+        <h3>Edit Task</h3>
+        <i class="fa-solid fa-x" id = "close-edit"></i>
+      </div>
+
+      <form class = "input-dialog" id = "input-dialog">
+        <label for = "edit-title">Title</label>
+        <input type="text" id = "edit-title" maxlength="16">
+        <label for = "edit-info">Info</label>
+        <textarea id = "edit-info" maxlength="46"></textarea>
+        <label for = "edit-select">Priority</label>
+        <select id = "edit-select">
+          <option value = "low">Low</option>
+          <option value = "medium">Medium</option>
+          <option value = "high">High</option>
+        </select> 
+        <label for = "edit-cal">Date</label>
+        <input type="date" id = "edit-cal">
+      </form>
+      
+      <button form="input-dialog" id = "edit-submit">Submit</button>
+
+    </dialog>
   </body>
 </html>
+
