todo cards basic functionality

--- a/src/template.html
+++ b/src/template.html
@@ -58,15 +58,13 @@
                  <h3 id = "task-name">
                    Study
                   </h3>
-                  <i class="fa-solid fa-circle" id = "med-importance"></i>
+                  <!-- <i class="fa-solid fa-circle" id = "Medium"></i> -->
                </div>
                <h5 id ="task-date">
                 Date: 
                </h5>
 
-                <p id ="task-info">
-                  review math concepts on pg101
-                </p>
+                <p id ="task-info"></p>
 
              </div>
             </div>
