todo card functionality add/remove

--- a/src/template.html
+++ b/src/template.html
@@ -12,7 +12,7 @@
       <aside>
         <div class = "side-content">
           <div class = "aside-title">
-            <h2>Todoer</h2>
+            <h2>Todoer </h2><p>by daniel</p>
           </div>
           <button id = "add-task">
             <i class="fa-solid fa-plus"></i>
